--- a/NubeBooks/Views/Admin/BuscarProforma.cshtml
+++ b/NubeBooks/Views/Admin/BuscarProforma.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "BuscarProforma";
     //Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+<div class="bg-light lter b-b wrapper-md">
+    <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l open-modal" data-toggle="modal" data-target="#modal-form-exportar"><i class="fa fa-cloud-download"></i>Exportar</button>
+    <a href="@Url.Action("NuevaProforma", "Admin")" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
+    <h1 class="m-n font-thin h3">Busqueda de Proformas</h1>
+</div>  
 <div class="wrapper-md">
     <div class="panel panel-default">
         <div class="table-responsive">
