Partidas de presupuesto

--- a/NubeBooks/Views/Admin/Categorias.cshtml
+++ b/NubeBooks/Views/Admin/Categorias.cshtml
@@ -170,7 +170,11 @@
                 output.Append("</div>");
 
                 output.Append("<div class='col-md-3 text-right'><div class='btn-group'>");
-                if (obj.IdCategoriaPadre != null || ViewBag.EsAdmin) { output.AppendFormat("<a class='btn-add' href='{0}'><i class='fa fa-pencil'></i>&nbsp;</a>", Url.Action("Categoria", new { id = obj.IdCategoria })); }
+                if (obj.IdCategoriaPadre != null || ViewBag.EsAdmin)
+                {
+                    output.AppendFormat("<a class='btn-add' href='{0}'><i class='fa fa-pencil'></i>&nbsp;</a>", Url.Action("Categoria", new { id = obj.IdCategoria }));
+                    output.AppendFormat("<a class='btn-add open-modal' data-toggle='modal' data-target='#modal-form' href='{0}'><i class='fa fa-trash'></i>&nbsp;</a>", Url.Action("Categoria", new { id = obj.IdCategoria }));
+                }
                 if (nivel < nivelMax) { output.AppendFormat("<a class='btn-add' href='{0}' title='Nueva Categoría Interna'>&nbsp;<i class='fa fa-plus'></i></a>", Url.Action("Categoria", new { id = 0, idPadre = obj.IdCategoria })); }
                 output.Append("</div></div></div>");
                 if (obj.Hijos != null && obj.Hijos.Count != 0) { output.Append(printTree(obj.Hijos, nivel + 1)); }
@@ -190,12 +194,12 @@
             <i class="fa fa-minus text-active"></i>&nbsp;<span class="text-active">Colapsar</span>
         </button>
 
-        <button class="btn m-b-xs btn-sm btn-default m-r" ui-toggle-class="btn-danger" id="btn-showInactive">
+        @*<button class="btn m-b-xs btn-sm btn-default m-r" ui-toggle-class="btn-danger" id="btn-showInactive">
             <i class="text"></i>
             <span class="text">Mostrar Inactivos</span>
             <i class="fa icon-ban text-active"></i>
             <span class="text-active">&nbsp;Mostrar Inactivos</span>
-        </button>
+        </button>*@
 
         <a href="@Url.Action("Categoria")" class="btn m-b-xs btn-sm btn-success btn-addon m-r"><i class="fa fa-plus"></i>Agregar Nuevo</a>
 
