--- a/NubeBooks/Views/Admin/Categorias.cshtml
+++ b/NubeBooks/Views/Admin/Categorias.cshtml
@@ -146,6 +146,30 @@
             }
         }
 
+        $('#modal-form').on('show.bs.modal', function (e) {
+            var button = $(e.relatedTarget);
+            var idElement = button.data('id');
+            var jsNombre = button.data('nombre');
+            var modal = $(this);
+            modal.find('.modal-title').text('Eliminar Elemento: ' + jsNombre);
+            modal.find('.modal-body input').val(idElement);
+        });
+        $("input#delete").click(function () {
+            var idelement = $('form#form-delete').serialize();
+            $.ajax({
+                type: "POST",
+                url: miBaseUrl + "/DeleteCategoria",
+                data: idelement,
+                success: function (msg) {
+                    $("#modal-form").modal('hide');
+                    window.location.href = miBaseUrl + "/Categorias";
+                },
+                error: function () {
+                    alert("failure");
+                }
+            });
+        });
+
     </script>
 }
 @functions{
@@ -173,7 +197,7 @@
                 if (obj.IdCategoriaPadre != null || ViewBag.EsAdmin)
                 {
                     output.AppendFormat("<a class='btn-add' href='{0}'><i class='fa fa-pencil'></i>&nbsp;</a>", Url.Action("Categoria", new { id = obj.IdCategoria }));
-                    output.AppendFormat("<a class='btn-add open-modal' data-toggle='modal' data-target='#modal-form' href='{0}'><i class='fa fa-trash'></i>&nbsp;</a>", Url.Action("Categoria", new { id = obj.IdCategoria }));
+                    output.AppendFormat("<a class='btn-add open-modal' data-toggle='modal' data-target='#modal-form' data-id='{0}' data-nombre='{1}'><i class='fa fa-trash'></i>&nbsp;</a>", obj.IdCategoria, obj.Nombre);
                 }
                 if (nivel < nivelMax) { output.AppendFormat("<a class='btn-add' href='{0}' title='Nueva Categoría Interna'>&nbsp;<i class='fa fa-plus'></i></a>", Url.Action("Categoria", new { id = 0, idPadre = obj.IdCategoria })); }
                 output.Append("</div></div></div>");
@@ -245,6 +269,27 @@
                 <div class="dd" id="nestable3">
                     @Html.Raw(printTree(Model, 1))
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade modal-task" id="modal-form">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Eliminar Elemento: </h4>
+            </div>
+            <div class="modal-body">
+                <p>Estas a punto de eliminar este comprobante, al hacerlo también eliminaras los Movimientos asociados a este comprobante. ¿Estás seguro de proseguir?</p>
+                <form id="form-delete" class="element" name="element">
+                    <input type="hidden" class="form-control" name="id" id="id-element">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <input class="btn btn-danger" type="submit" value="Eliminar" id="delete">
             </div>
         </div>
     </div>
