ubicaciones de inventarios

--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -579,7 +579,7 @@
                                                         }
         </div>
     </div>
-    @if (Model != null && Model.IdComprobante > 0)
+    @*@if (Model != null && Model.IdComprobante > 0)
     {
         <div class="panel panel-default">
             <div class="panel-heading">Movimientos Asociados</div>
@@ -619,5 +619,5 @@
                 </tbody>
             </table>
         </div>
-    }
+    }*@
 </div>
