--- a/NubeBooks/Views/Admin/MovimientoInv.cshtml
+++ b/NubeBooks/Views/Admin/MovimientoInv.cshtml
@@ -11,6 +11,12 @@
 @section scripts{
     @Scripts.Render("~/Content/themes/admin/js/select2/select2.min.js")
     <script type="text/javascript">
+        @{
+            var jss = new System.Web.Script.Serialization.JavaScriptSerializer();
+            var userInfoJson = jss.Serialize(ViewBag.lstUbicaciones);
+         }
+        var mydata = JSON.parse('@Html.Raw(userInfoJson)');
+
         var jUserExt = '@ViewBag.EsUsuarioExterno';
         var miBaseUrl = '';
         $(function () {
@@ -21,7 +27,12 @@
                 allowClear: true,
                 placeholder: "Seleccionar"
             });
+            if ('@Model.IdMovimientoInv' == 0 && '@Model.IdTipoMovimientoInv' == 2)
+            { $('#IdUbicacion').select2({ data: mydata }); }
+
             GetUnidadMedida($('#IdItem').val());
+            GetUbicacion();
+
             $('.rol-accs').each(function () {
                 if (jUserExt == 'True') $(this).prop('disabled', true);
             });
@@ -45,6 +56,21 @@
             });
         }
 
+        function GetUbicacion()
+        {
+            //debugger;
+            var jsTipoMovInv = '@Model.IdTipoMovimientoInv';
+            if(jsTipoMovInv == 2 && $('#IdUbicacion').val() != '' && $('#IdUbicacion').val() > 0)
+            {
+                //console.log($('#IdUbicacion'));
+                ActualizarUbicaciones();
+            }
+            else
+            {
+                $('#IdUbicacion').select2("val", "");
+            }
+        }
+
         function CheckNumericValue(e) {
             var key = e.which ? e.which : e.keyCode;
             //enter key  //backspace //tabkey      //escape key
@@ -55,6 +81,36 @@
                 alert("Solo ingresar caracteres numericos");
                 return false;
             }
+        }
+
+        function ActualizarUbicaciones()
+        {
+            //console.log($(elem).val());
+            //debugger;
+            var jsSerieLote = $('#SerieLote').val();
+
+            $.ajax({
+                type: "POST",
+                url: miBaseUrl + "/GetUbicaciones_EnLote",
+                cache: false,
+                data: { serieLote: jsSerieLote },
+                dataType: 'json',
+                delay: 750,
+                success: function (data) {
+                    var myResults = [];
+                    $.each(data.lista, function (index, item) {
+                        myResults.push({
+                            'id': item.IdUbicacion,
+                            'text': item.Nombre,
+                            'data': item
+                        });
+                    });
+
+                    $('#IdUbicacion').select2({
+                        data: myResults
+                    })
+                }
+            });
         }
     </script>
 }
@@ -137,15 +193,24 @@ else { cadena = "Actualizar"; }
                         }
                         <div class="col-md-4">
                             <label>Serie - Lote</label>
-                            @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control", @placeholder = "Serie / Lote", @type = "text", @required = "" })
+                            @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control", @placeholder = "Serie / Lote", @type = "text", @required = "", @onkeyup = "ActualizarUbicaciones()" })
                             @Html.ValidationMessageFor(u => u.SerieLote, "", new { @style = "color:red;" })
                         </div>
                         @if (Model.IdTipoMovimientoInv != 1)
                         {
                             <div class="col-md-4">
                                 <label>Ubicación</label>
-                                @Html.DropDownListFor(u => u.IdUbicacion, new SelectList(ViewBag.lstUbicaciones, "IdUbicacion", "Nombre", Model != null ? (Model.IdUbicacion != 0 ? Model.IdUbicacion : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs" })
-                                @Html.ValidationMessageFor(u => u.IdUbicacion, "", new { @style = "color:red;" })
+                                @Html.TextBoxFor(u => u.IdUbicacion, new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder rol-accs" })
+
+                                @*<select class="col-xs-12 col-sm-12 col-md-12 no-padder miselect2_clear rol-accs"
+                                        id="IdUbicacion" name="IdUbicacion">
+                                    @{ var pUbicacion = Model != null ? Model.IdUbicacion : 0; }
+                                    <option value=""></option>
+                                    @foreach (var ubi in (List<UbicacionDTO>)ViewBag.lstUbicaciones)
+                                    {
+                                        <option value="@ubi.IdUbicacion" @(ubi.IdUbicacion == pUbicacion ? "selected=selected" : "")>@ubi.Nombre</option>
+                                    }
+                                </select>*@
                             </div>
                         }
                     </div>
