--- a/NubeBooks/Views/Admin/MovimientoInv.cshtml
+++ b/NubeBooks/Views/Admin/MovimientoInv.cshtml
@@ -65,7 +65,7 @@
                 //console.log($('#IdUbicacion'));
                 ActualizarUbicaciones();
             }
-            else
+            else if (jsTipoMovInv == 2)
             {
                 $('#IdUbicacion').select2("val", "");
             }
