--- a/NubeBooks/Views/Admin/MovimientoInv.cshtml
+++ b/NubeBooks/Views/Admin/MovimientoInv.cshtml
@@ -14,8 +14,10 @@
         @{
             var jss = new System.Web.Script.Serialization.JavaScriptSerializer();
             var userInfoJson = jss.Serialize(ViewBag.lstUbicaciones);
+            var userInfoJson2 = jss.Serialize(ViewBag.lstLotes);
          }
         var mydata = JSON.parse('@Html.Raw(userInfoJson)');
+        var jsLstLotes = JSON.parse('@Html.Raw(userInfoJson2)');
 
         var jUserExt = '@ViewBag.EsUsuarioExterno';
         var miBaseUrl = '';
@@ -29,6 +31,18 @@
             });
             if ('@Model.IdMovimientoInv' == 0 && '@Model.IdTipoMovimientoInv' == 2)
             { $('#IdUbicacion').select2({ data: mydata }); }
+            if ('@Model.IdTipoMovimientoInv' == 2)
+            {
+                var auxLotes = [];
+                $.each(jsLstLotes, function (index, item) {
+                    auxLotes.push({
+                        'id': item.text,
+                        'text': item.text,
+                    });
+                });
+
+                $('#SerieLote').select2({ data: auxLotes });
+            }
 
             GetUnidadMedida($('#IdItem').val());
             GetUbicacion();
@@ -67,6 +81,7 @@
             }
             else if (jsTipoMovInv == 2)
             {
+                $('#IdUbicacion').select2({ data: mydata });
                 $('#IdUbicacion').select2("val", "");
             }
         }
@@ -83,10 +98,44 @@
             }
         }
 
+        function ActualizarLotes()
+        {
+            var jsTipoMov = '@Model.IdTipoMovimientoInv';
+            if(jsTipoMov == 2)
+            {
+                $('#SerieLote').select2("val", "");
+                $('#IdUbicacion').select2("val", "");
+
+                var jsIdItem = $('#IdItem').select2("val");
+
+                $.ajax({
+                    type: "POST",
+                    url: miBaseUrl + "/GetLotes_EnItem",
+                    cache: false,
+                    data: { idItem: jsIdItem },
+                    dataType: 'json',
+                    delay: 750,
+                    success: function (data) {
+                        var myResults = [];
+                        $.each(data.lista, function (index, item) {
+                            myResults.push({
+                                'id': item.text,
+                                'text': item.text,
+                            });
+                        });
+
+                        $('#SerieLote').select2({
+                            data: myResults
+                        })
+                    }
+                });
+            }
+
+        }
+
         function ActualizarUbicaciones()
         {
-            //console.log($(elem).val());
-            //debugger;
+            if ('@Model.IdTipoMovimientoInv' == 2) { $('#IdUbicacion').select2("val", "") };
             var jsSerieLote = $('#SerieLote').val();
 
             $.ajax({
@@ -173,7 +222,7 @@ else { cadena = "Actualizar"; }
                             <label>Código - Item</label>
                             @*@Html.DropDownListFor(u => u.IdItem, new SelectList(ViewBag.lstItems, "IdItem", "Codigo", Model != null ? (Model.IdItem != 0 ? Model.IdItem : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder codigo miselect2" })*@
                             <select class="col-xs-12 col-sm-12 col-md-12 no-padder codigo miselect2_clear rol-accs"
-                                    id="IdItem" name="IdItem" required>
+                                    id="IdItem" name="IdItem" onchange="ActualizarLotes()" required>
                                 @{ var pItem = Model != null ? Model.IdItem : 0;}
                                 <option value=""></option>
                                 @foreach (var nItem in (List<ItemDTO>)ViewBag.lstItems)
@@ -193,7 +242,14 @@ else { cadena = "Actualizar"; }
                         }
                         <div class="col-md-4">
                             <label>Serie - Lote</label>
-                            @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control", @placeholder = "Serie / Lote", @type = "text", @required = "", @onkeyup = "ActualizarUbicaciones()" })
+                            @if (Model.IdTipoMovimientoInv == 1)
+                            {
+                                @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control rol-accs", @placeholder = "Serie / Lote", @type = "text", @required = "", @onkeyup = "ActualizarUbicaciones()" })
+                            }
+                            else
+                            {
+                                @Html.TextBoxFor(u => u.SerieLote, new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder rol-accs", @type = "text", @required = "", @onchange = "ActualizarUbicaciones()" })
+                            }
                             @Html.ValidationMessageFor(u => u.SerieLote, "", new { @style = "color:red;" })
                         </div>
                         @if (Model.IdTipoMovimientoInv != 1)
