--- a/NubeBooks/Views/Admin/MovimientoInv.cshtml
+++ b/NubeBooks/Views/Admin/MovimientoInv.cshtml
@@ -13,11 +13,12 @@
     <script type="text/javascript">
         @{
             var jss = new System.Web.Script.Serialization.JavaScriptSerializer();
-            var userInfoJson = jss.Serialize(ViewBag.lstUbicaciones);
-            var userInfoJson2 = jss.Serialize(ViewBag.lstLotes);
+            var infoLotes = jss.Serialize(ViewBag.lstLotes);
+            var infoUbicaciones = jss.Serialize(ViewBag.lstUbicaciones);
          }
-        var mydata = JSON.parse('@Html.Raw(userInfoJson)');
-        var jsLstLotes = JSON.parse('@Html.Raw(userInfoJson2)');
+        var jsLstLotes = JSON.parse('@Html.Raw(infoLotes)');
+        var jsLstUbicaciones = JSON.parse('@Html.Raw(infoUbicaciones)');
+
 
         var jUserExt = '@ViewBag.EsUsuarioExterno';
         var miBaseUrl = '';
@@ -29,23 +30,31 @@
                 allowClear: true,
                 placeholder: "Seleccionar"
             });
-            if ('@Model.IdMovimientoInv' == 0 && '@Model.IdTipoMovimientoInv' == 2)
-            { $('#IdUbicacion').select2({ data: mydata }); }
             if ('@Model.IdTipoMovimientoInv' == 2)
             {
-                var auxLotes = [];
+                var auxLotes = []; //Lotes
                 $.each(jsLstLotes, function (index, item) {
                     auxLotes.push({
                         'id': item.text,
                         'text': item.text,
                     });
                 });
-
                 $('#SerieLote').select2({ data: auxLotes });
+
+                var auxUbicaciones = []; //Ubicaciones
+                $.each(jsLstUbicaciones, function (index, item) {
+                    auxLotes.push({
+                        'id': item.IdUbicacion,
+                        'text': item.Nombre,
+                    });
+                });
+                $('#IdUbicacion').select2({ data: auxUbicaciones });
+
+                GetUbicacion();
             }
 
             GetUnidadMedida($('#IdItem').val());
-            GetUbicacion();
+            
 
             $('.rol-accs').each(function () {
                 if (jUserExt == 'True') $(this).prop('disabled', true);
@@ -81,7 +90,7 @@
             }
             else if (jsTipoMovInv == 2)
             {
-                $('#IdUbicacion').select2({ data: mydata });
+                //$('#IdUbicacion').select2({ data: mydata });
                 $('#IdUbicacion').select2("val", "");
             }
         }
@@ -135,31 +144,39 @@
 
         function ActualizarUbicaciones()
         {
-            if ('@Model.IdTipoMovimientoInv' == 2) { $('#IdUbicacion').select2("val", "") };
-            var jsSerieLote = $('#SerieLote').val();
+            var jsTipoMov = '@Model.IdTipoMovimientoInv';
 
-            $.ajax({
-                type: "POST",
-                url: miBaseUrl + "/GetUbicaciones_EnLote",
-                cache: false,
-                data: { serieLote: jsSerieLote },
-                dataType: 'json',
-                delay: 750,
-                success: function (data) {
-                    var myResults = [];
-                    $.each(data.lista, function (index, item) {
-                        myResults.push({
-                            'id': item.IdUbicacion,
-                            'text': item.Nombre,
-                            'data': item
-                        });
+            if (jsTipoMov == 2)
+            {
+                $('#IdUbicacion').select2("val", "")
+
+                var jsSerieLote = $('#SerieLote').val();
+                if (jsSerieLote != "")
+                {
+                    $.ajax({
+                        type: "POST",
+                        url: miBaseUrl + "/GetUbicaciones_EnLote",
+                        cache: false,
+                        data: { serieLote: jsSerieLote },
+                        dataType: 'json',
+                        delay: 750,
+                        success: function (data) {
+                            var myResults = [];
+                            $.each(data.lista, function (index, item) {
+                                myResults.push({
+                                    'id': item.IdUbicacion,
+                                    'text': item.Nombre,
+                                    'data': item
+                                });
+                            });
+
+                            $('#IdUbicacion').select2({
+                                data: myResults
+                            })
+                        }
                     });
-
-                    $('#IdUbicacion').select2({
-                        data: myResults
-                    })
                 }
-            });
+            };
         }
     </script>
 }
@@ -244,7 +261,7 @@ else { cadena = "Actualizar"; }
                             <label>Serie - Lote</label>
                             @if (Model.IdTipoMovimientoInv == 1)
                             {
-                                @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control rol-accs", @placeholder = "Serie / Lote", @type = "text", @required = "", @onkeyup = "ActualizarUbicaciones()" })
+                                @Html.TextBoxFor(u => u.SerieLote, new { @class = "form-control rol-accs", @placeholder = "Serie / Lote", @type = "text", @required = "" })
                             }
                             else
                             {
