avance de asociacion de comprobantes

--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -281,6 +281,7 @@ else { cadena = "Actualizar"; }
                                                 }
     @if (Model != null && Model.IdEntidadResponsable > 0)
     {
+        <div class="line line-dashed line-lg pull-in"></div>
         <div class="panel panel-default">
             <div class="panel-heading">Comprobantes Asociados</div>
             <table st-table="rowCollectionBasic" class="table table-bordered table-striped">
