--- a/NubeBooks/Views/Admin/Proyecto.cshtml
+++ b/NubeBooks/Views/Admin/Proyecto.cshtml
@@ -68,6 +68,7 @@ else { cadena = "Actualizar"; }
     </div>
     @if (Model != null && Model.IdProyecto > 0)
     {
+        <div class="line line-dashed line-lg pull-in"></div>
         <div class="panel panel-default">
             <div class="panel-heading">Comprobantes Asociados</div>
             <table st-table="rowCollectionBasic" class="table table-bordered table-striped">
